<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/team_a_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/team_a_name"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/team_b_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_b_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/team_b_name"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/team_a_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_a_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/team_a_score"
        android:textAlignment="center"
        android:textSize="72sp"
        app:layout_constraintEnd_toStartOf="@+id/team_b_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_a_text" />

    <TextView
        android:id="@+id/team_b_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/team_b_score"
        android:textAlignment="center"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/team_a_score"
        app:layout_constraintTop_toBottomOf="@+id/team_b_text" />

    <Button
        android:id="@+id/team_a_touchdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/team_a_touchdown"
        app:layout_constraintBottom_toTopOf="@+id/team_a_extra_point"
        app:layout_constraintEnd_toStartOf="@+id/team_b_touchdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_a_score" />

    <Button
        android:id="@+id/team_b_touchdown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/team_b_touchdown"
        app:layout_constraintBottom_toTopOf="@+id/team_b_extra_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/team_a_touchdown"
        app:layout_constraintTop_toBottomOf="@+id/reset_b_score" />

    <Button
        android:id="@+id/team_a_extra_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/team_a_extra_point"
        app:layout_constraintBottom_toTopOf="@+id/team_a_field_goal"
        app:layout_constraintEnd_toStartOf="@+id/team_b_extra_point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_a_touchdown" />

    <Button
        android:id="@+id/team_b_extra_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/team_b_extra_point"
        app:layout_constraintBottom_toTopOf="@+id/team_b_field_goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/team_a_extra_point"
        app:layout_constraintTop_toBottomOf="@+id/team_b_touchdown" />

    <Button
        android:id="@+id/team_a_field_goal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/team_a_field_goal"
        app:layout_constraintBottom_toTopOf="@+id/team_a_safety"
        app:layout_constraintEnd_toStartOf="@+id/team_b_field_goal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_a_extra_point" />

    <Button
        android:id="@+id/team_b_field_goal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/team_b_field_goal"
        app:layout_constraintBottom_toTopOf="@+id/team_b_safety"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/team_a_field_goal"
        app:layout_constraintTop_toBottomOf="@+id/team_b_extra_point" />

    <Button
        android:id="@+id/team_a_safety"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/team_a_safety"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/team_b_safety"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/team_b_safety"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/team_b_safety"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/team_a_safety" />

    <Button
        android:id="@+id/reset_a_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:background="#F44336"
        android:text="@string/reset_a_score"
        app:layout_constraintBottom_toTopOf="@+id/team_a_touchdown"
        app:layout_constraintEnd_toStartOf="@+id/reset_b_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_a_score" />

    <Button
        android:id="@+id/reset_b_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:background="#F44336"
        android:text="@string/reset_b_score"
        app:layout_constraintBottom_toTopOf="@+id/team_b_touchdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reset_a_score"
        app:layout_constraintTop_toBottomOf="@+id/team_b_score" />

</androidx.constraintlayout.widget.ConstraintLayout>